<resources>
    <string name="app_name">RoadSync</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="customer_text">Get access to your orders, wishlists and recommendations</string>
    <string name="email_mobile_no">Email / Username <font color="#590d22">*</font></string>
    <string name="enter_password">Enter password</string>
    <string name="email_hint">Enter email address</string>
    <string name="password">Password <font color="#590d22">*</font></string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account">Don’t have an account? <font color="#3498DB">Create one now</font></string>
    <string name="already_account">Already Have an account? <font color="#3498DB">Login now</font></string>
    <string name="change_category">Want to change category? <font color="#3498DB"> Go Back</font></string>
    <string name="terms">By continuing you agree to Road Sync’s<font color="#3498DB"> Terms of Use</font> and <font color="#3498DB">Privacy Policy</font> </string>
    <string name="already_registered_log_in_here">Already Registered? <font color="#ff5757">Log in here</font></string>
    <string name="sign_in_to_continue."><font color="#ff5757">Sign in to continue.</font></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="signup">Sign up</string>
    <string name="signup_">Signup!</string>
    <string name="send">Send Email</string>
    <string name="enter_email">Enter Your Email Address</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="trips">Trips</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="create_trip">Create Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="route">Route</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="trip_details">Trip Details</string>
    <string name="invite">Invite People</string>
    <string name="join_trip">Join Trip</string>
    <string name="remove">Remove</string>
    <string name="start_trip">Start Trip</string>
    <string name="no_trip_found">No Trip Found</string>
    <string name="live_location">Live Location</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="endTrip">End Trip</string>

</resources>