<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation.xml"
    app:startDestination="@id/dashboard">

    <fragment
        android:id="@+id/dashboard"
        android:name="com.roadsync.home.presentation.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_dashboard_to_createTripFragment"
            app:destination="@id/createTripFragment" />
        <action
            android:id="@+id/action_dashboard_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/trips"
        android:name="com.roadsync.home.presentation.trip.TripFragment"
        android:label="@string/trips"
        tools:layout="@layout/fragment_trip" >
        <action
            android:id="@+id/action_trips_to_createTripFragment"
            app:destination="@id/createTripFragment" />
        <action
            android:id="@+id/action_trips_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/notifications"
        android:name="com.roadsync.home.presentation.notification.NotificationFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/account"
        android:name="com.roadsync.home.presentation.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_account_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/createTripFragment"
        android:name="com.roadsync.home.presentation.trip.newtrip.CreateTripFragment"
        android:label="fragment_create_trip"
        tools:layout="@layout/fragment_create_trip" >
        <action
            android:id="@+id/action_createTripFragment_to_tripDetailsFragment"
            app:destination="@id/tripDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/tripDetailsFragment"
        android:name="com.roadsync.home.presentation.trip.TripDetailsFragment"
        android:label="fragment_trip_details"
        tools:layout="@layout/fragment_trip_details" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.roadsync.home.presentation.profile.ProfileFragment"
        android:label="ProfileFragment" />


</navigation>