<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageTrip"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_road_trip" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageTrip"
            android:layout_marginTop="-140dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_rectangle_background"
            android:tint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageTrip"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="@color/text_light" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sign_in_to_continue."
                android:textAlignment="center"
                android:textColor="@color/text_light" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/text_light" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edEmail"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_editext"
                android:fontFamily="@font/poppins_regular"
                android:hint="hello@roadsync.com"
                android:inputType="textEmailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black" />


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="@color/text_light" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edPassword"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_editext"
                android:fontFamily="@font/poppins_regular"
                android:hint="*****"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="32dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/login"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPassword"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/text_light" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/signup_"
                android:textAlignment="center"
                android:textColor="@color/text_light" />


        </LinearLayout>


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:visibility="gone" />

    </RelativeLayout>
</ScrollView>