<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A590D22"
    tools:context=".home.presentation.trip.newtrip.CreateTripFragment">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/primary_blue"
        android:elevation="2dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_16"
            android:src="@drawable/line_md_arrow_left" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_semibold"
            android:padding="8dp"
            android:text="@string/create_trip"
            android:textColor="@color/white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/createTripLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_8"
                android:layout_marginVertical="@dimen/dp_16"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/trip_name"
                    android:textAlignment="center"
                    android:textColor="@color/text_darker" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edTripName"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_editext_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint=""
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black" />


                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/route"
                    android:textAlignment="center"
                    android:textColor="@color/text_darker" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edDeparture"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_editext_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/departure"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/destination"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/bg_editext_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/destination"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Pick-up point"
                    android:textAlignment="center"
                    android:textColor="@color/text_darker" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edPickUp"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_editext_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint=""
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black" />
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Stay At"
                    android:textAlignment="center"
                    android:textColor="@color/text_darker" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edStay"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/bg_editext_white"
                    android:fontFamily="@font/poppins_regular"
                    android:hint=""
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/black" />



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createTripButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/create_trip"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/joinTripButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/bg_button"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/join_trip"
                    android:textColor="@color/white" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />


</RelativeLayout>